; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_IN_ActivateDIMouse.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_input.c_IN_ActivateDIMouse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_pMouse = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Falling back to Win32 mouse support...\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"in_mouse\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"-1\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IN_ActivateDIMouse() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @g_pMouse, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %18

5:                                                ; preds = %0
  %6 = load i32, i32* @g_pMouse, align 4
  %7 = call i32 @IDirectInputDevice_Acquire(i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = call i64 @FAILED(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %5
  %12 = call i32 (...) @IN_InitDIMouse()
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %11
  %15 = call i32 @Com_Printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 @Cvar_Set(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  br label %17

17:                                               ; preds = %14, %11
  br label %18

18:                                               ; preds = %4, %17, %5
  ret void
}

declare dso_local i32 @IDirectInputDevice_Acquire(i32) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @IN_InitDIMouse(...) #1

declare dso_local i32 @Com_Printf(i8*) #1

declare dso_local i32 @Cvar_Set(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
